# ThreadScope

./: .gitignore  .travis.yml  AUTHORS  About.hs  CHANGELOG.md  CPUTimeline.hs  CairoDrawing.hs  CapabilityLabels.hs  DrawCapabilityProfile.hs  EventDuration.hs  EventTree.hs  EventlogViewerCommon.hs  Events2VCD.hs  EventsWindow.hs  FileDialog.hs  Key.hs  LICENSE  Main.hs  Makefile  Options.hs  Paths_threadscope.hs  README  README.md  ReadEvents.hs  Refresh.hs  ReportEventTree.hs  SaveAsPDF.hs  SaveAsPNG.hs  Scrolling.hs  ShowEvents.hs  ShowGhcEvents.hs  Sidebar.hs  StartTimes.hs  State.hs  SumEulerPar1_sparks_detailed.eventlog  TODO  TestEvents.hs  ThreadScope.hs  Ticks.hs  Timeline.hs  (+30 more)
.github/workflows/: ci.yml
.travis/: deploy.patch  osx.patch
Events/: EventDuration.hs  EventTree.hs  HECs.hs  ReadEvents.hs  SparkCounters.hs  SparkStats.hs  SparkTree.hs  TestEvents.hs
GHC/RTS/: EventLogFormat.h  Events.hs
GUI/: About.hs  App.hs  BookmarkView.hs  ConcurrencyControl.hs  DataFiles.hs  Dialogs.hs  EventsView.hs  EventsWindow.hs  FileDialog.hs  GtkExtras.hs  Histogram.hs  KeyView.hs  Main.hs  MainWindow.hs  ProgressView.hs  SaveAs.hs  SaveAsPDF.hs  SaveAsPNG.hs  Sidebar.hs  StartupInfoView.hs  State.hs  SummaryView.hs  SummaryViewOld.hs  Timeline.hs  TraceView.hs  Traces.hs  Types.hs  Utils.hs  ViewerColours.hs
GUI/Timeline/: Activity.hs  CairoDrawing.hs  HEC.hs  Key.hs  Motion.hs  Render.hs  RenderBookmarks.hs  Sparks.hs  Ticks.hs  Types.hs  WithViewScale.hs
Timeline/: Activity.hs  HEC.hs  Key.hs  Motion.hs  Render.hs  RenderBookmarks.hs  Ticks.hs  WithViewScale.hs
Timeline/Render/: Constants.hs
_darcs/: hashed_inventory  index  tentative_hashed_inventory  tentative_pristine
_darcs/inventories/: 0000000294-39e2b58bf3a96bb48eac339c4fed8f5a764ef18278a9e149646d255543047fd8  0000000298-8b06ae501bf721ca2c4b2246ee1179bf7315750e446f8d417426b78a6857fc31  0000000736-5824513860fb71a57902e07dc9e38d1f3cd687bc34889d6f773ba0e933013e5b  0000036809-0c672f872e19bc125f1b6c1853f48cc08d3c00b88670a57be75c3e8c152563ac  0000038152-761b72d90a10455f0107ee944bccea867dfabe86996fb9efd763f480f292bb40  0000038409-ed380201e2f9c022f04e4b458f6232fa46a68460c2c2e47fabf002e6f1bcd49c  0000038632-f950aed157fac597d398f0eb715cbe920b7fce83f689e58366473bad5a7dad5a  0000038641-81c138b2ef0f086dc2233112ce4baec73683ae661b3410a1b3b8da9e9f50dcba  0000038864-270d48ad9997e847426a7a4bfe85739e5f6d696db7626cec6924249645393263  0000038865-68fc6f7962e7976287dbbf5a98733a4f0dacb38a879f0d3207d7ad5dfa2efafa  0000038865-b58c5fe22d9a4e64e4f45ece014043fa184b09c94b2cb89f9b5e28ad0ee42900  0000038865-d594d3f723623dfb2672f3923f11833bdfd856a02ee577116e65d8711fc491bd  0000039123-1a9def8a1a564383dfeeb8594158d2504b7747135340a710df3ea6f8272ce07a  0000039346-23b6c8aac732cef11df91f57540a6eb2e4bb761a4e786bea003439ba9b137cdb  0000039346-b1484e6018a4feff3bc6825233178e66c87b0b44c2d2c31b30544fc6bcbc1db9  0000039531-ae5ce28ac08489bd3112fd21a9a0aa81a1008d066c7ee9e8283b3a24b97d5368  0000039545-077398e24983eea24ddce0cd5a7accac3fd7b043dff41120046d628084bd2ae1  0000039754-188917f9d2123571dcf8476f9e3764627d27471e5de9a244c64a4bd59bbe6444  0000039754-61b5c0576a0104563c94f383d3fb5223542ff1fb5086a6f7baa157cd4555bc42  0000039754-e52bac84f8251253595c56d63a8331a265000044fc06b49593eee7fe06931894  0000040004-b0749f5a9b0e5b75c0f310cbb63ce1210d6ab352258ec76d83d9a24f4cec2bb5  0000040036-df9bc9cd55529416a43d417748887db9df164d0353b73b6e14cb1a91be4d3bcc  0000040257-fd960130ea2f1cd7fbcc23e9d82757da99301b383f80dac802c08e1833683dec  0000040290-39cbae84d8c6a2878b8ce92574b479762431f616d60acb3e011a1528cd9c90bd  0000040290-a40ba1ed6b80d5dc07440bdb15de1a75f36d290699b1370137932ecb2034a6f1  0000040501-adbc1ee45a4e4b5df79b1d56019d495bb9a6d718f208bee8670c3d0906d52df9  0000040509-977da5cc61ac54ebebb616b65417176b2d09c6347c00e9f65d74ccb63529260e  0000040522-3218c842a9c4261e44bd1aba12a5823f33e08b47710a2b445505e2a798126a18  0000040763-d4a5ac5e90a595bcd642e919aca2826bda4d5ae4230f94968db80359c9351e8f  0000040946-e3bdf86e5592f60cc63fcafd7b8709a73d8c3deece600d7c127bc67e2ed710d9  0000040987-eaa8f1146bde79d38990f3a433c6b078816eeaedda28f7236546e2a81c67859b  0000041174-4e64a543fb103b15d38b2678ae8e24793a65f226af04f882ebe7850de1cafad5  0000041174-eae4103052c1362c4b446d40d9dae9b483d9513c3da51ffcd2899106c49f0934  0000041197-9c418ebeba26ad3aadbd86d2ff812671116e76955490c90aa92dffaaa35790c7  0000041432-c53270a0a5c22329777a9cf0cdf874906dbf2fbca29b3b670f454664c2ad4730  0000041520-6ae8d935bd04829be87bd532961095933856ef3ecb1991cafad197ad123039e9  0000041785-78f2cd1d1ea1bc96dab62f39abe9fb85be25009ba8a44070bb9494270f6d8b8b  0000042005-134b175feca3ef2b734ec268dfee19c831d61774b4cba16f70227a77def75861  0000042649-9c238d07268214354bc3faad37490c194730c19722fa244855499898a3b414e5  0000042917-39c58a470c44d9bcbdb433f5649d63f3cd431f06231845a5e2d3a6da59d082d6  (+259 more)
_darcs/patches/: 0000000066-435b4753e7498c40a0593a1a0fdda4b067746f20cec2948520b019286080e175  0000000111-9f7c115f0b2dbd025c2b898d68a204904681e0284a8cc6c7307d78e49862af83  0000000150-c1b54f7f550c6ae60afb1d52e8eb871614f130bc2717ef72278d4507d039e9b6  0000000162-afc14112e6df6e72b78ea0c09cf895851a5c8ba27a7326d9ee6ad9e351502e2a  0000000163-75367b489e2cfa661d90d9aeb8009e67f696d2e06eef91f779928b4ae6626b9d  0000000167-f77afd340fba700677f02700de1105788f87cf3fda7e42c10970b417ed7550a7  0000000176-a1128279948b3023ba7969e461a3b8fc63649f518545d804093d03ccca37fb27  0000000179-6946261e4053f7688fb41830f04b8c588b22b8622c0bf4991ed1e19b46b69ece  0000000189-050063ff1a433050957aab73301d8a1edc02d18b2d230cab6457fae56afdeb61  0000000199-428bbe89b924a28684039ed3e395827352b3b6f5e93c11930a9e99eedd83bb63  0000000201-056b8cd8bb57ec2eb90ee3d0a333e9987e2be2aacd7f07ff8cae9d89e012a1d0  0000000201-4617a4b9d8291b76421a660e4dd0e02699e949518a4db9f4013525a69d829db7  0000000201-a52b04a167d8a147e0adfb820821f0e9a3009038c73ed6eb86e6f2bb2a125672  0000000205-639e88fd11d145678baa52d482cddc57535881216908f639c57a7e6318020290  (+891 more)
_darcs/prefs/: defaultrepo  repos  (+1 more)
scripts/: install-on-osx.sh
tests/: Hello.hs  Makefile  Null.hs  ParFib.hs  SumEulerPar1.hs  parfib.eventlog  soda7.eventlog  warshall.eventlog
(+805 files in other folders)
