name:             ghc-events
version:          0.2.0.1
synopsis:         Library and tool for parsing .eventlog files from GHC
description:      Parses .eventlog files emitted by GHC 6.12.1 and later.
                  Includes the show-ghc-events tool to dump an event
                  log file as text.
category:         Development, GHC, Debug, Profiling, Trace
license:          BSD3
license-file:     LICENSE
author:           Donnie Jones <donnie@darthik.com>, 
                  Simon Marlow <marlowsd@gmail.com>
maintainer:       Simon Marlow <marlowsd@gmail.com>
build-type:       Simple
tested-with:      GHC == 6.10.2, GHC == 6.11.20090221
cabal-version:    >= 1.6
extra-source-files: GHC/RTS/EventLogFormat.h

library {
  build-depends:    base       == 4.*,
                    mtl        == 1.1.*,
                    containers >= 0.2 && < 0.4,
                    binary     == 0.5.*,
                    bytestring == 0.9.*
  exposed-modules:  GHC.RTS.Events
  extensions:	    CPP
}

executable show-ghc-events {
  main-is:          ShowGhcEvents.hs
}


